Nk-30 All forms wrapped in form tags with submit events & styling fixes

--- a/nekanban/src/styles.css
+++ b/nekanban/src/styles.css
@@ -28,6 +28,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   max-width: 500px;
 }
 
+.full-width-form {
+  width: 100%;
+}
 
 .comments-body-wrap body {
   /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;*/
